--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,10 +35,8 @@ services:
     restart: always
     ports:
       - '80:80'
-    # volumes:
-    #   - nuxt_value:/usr/share/nginx/html/
-    #   - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    #   - static_value:/var/html/static/
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - djangonetwork
 
