--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name hh.local;
+    server_name 127.0.0.1;
     server_tokens on;
     client_max_body_size 50M;
     # return 301 https://localhost$request_uri; # Редирект на 443 порт
@@ -19,7 +19,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend_test:8000;
+        proxy_pass http://backend:8000;
 
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
@@ -31,7 +31,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend_test:8000;
+        proxy_pass http://backend:8000;
     }
 
     # location /static/admin/ {
