--- a/nginx.conf
+++ b/nginx.conf
@@ -14,12 +14,12 @@ server {
     #     try_files $uri $uri/index.html =404;
     # }
 
-    location /backend/ {
+    location / {
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/;
 
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
