--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.9'
 
 services:
 
-  database:
-    container_name: database
+  pattern_database:
+    container_name: pattern_database
     image: postgres:13.3
     environment:
       POSTGRES_USER: root
@@ -11,38 +11,26 @@ services:
       POSTGRES_DB: db
     ports:
       - "5433:5432"
-    networks:
-      - djangonetwork
+    # command: sh -c "rm -rf /var/lib/postgresql/d1/"
     volumes:
-      - ./data/:/var/lib/
+      - ./pg_data:/var/lib/postgresql
 
-  backend:
-    container_name: backend_test
-    restart: always
-    build:
-      context: .
-      dockerfile: Dockerfile
-    depends_on:
-      - database
-    networks:
-      - djangonetwork
-    env_file:
-      - ./.env
+    # pattern_backend:
+    #   container_name: pattern_backend
+    #   restart: always
+    #   build:
+    #     context: .
+    #     dockerfile: Dockerfile
+    #   depends_on:
+    #     - pattern_database
+    #   env_file:
+    #     - ./.env
 
-  nginx:
-    image: nginx:1.19.3
-    container_name: nginx_test
-    restart: always
-    ports:
-      - '80:80'
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - djangonetwork
-
-networks:
-  djangonetwork:
-    driver: bridge
-
-volumes:
-  database_value:
+    # pattern_nginx:
+    #   image: nginx:1.19.3
+    #   container_name: pattern_nginx
+    #   restart: always
+    #   ports:
+    #     - '80:80'
+    #   volumes:
+    #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
