--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend:8000;
+        proxy_pass http://pattern_backend:8000;
 
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
@@ -31,7 +31,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend:8000;
+        proxy_pass http://pattern_`backend:8000;
     }
 
     # location /static/admin/ {
